--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/src/index.js",
   "scripts": {
     "build": "tsc -p .",
+    "watch": "onchange \"src/core/*.ts\" -- npm run build",
     "start": "tsc -p . && env-cmd node dist/src/index.js",
     "test": "env-cmd jest --verbose --coverage"
   },
@@ -26,6 +27,7 @@
     "axios": "^0.27.2",
     "env-cmd": "^10.1.0",
     "jest": "^28.1.0",
+    "onchange": "^7.1.0",
     "request": "^2.88.2",
     "ts-jest": "^28.0.2",
     "typescript": "^4.6.4"
