--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tradier",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "SDK for Tradier API",
   "main": "dist/src/index.js",
   "scripts": {
@@ -23,17 +23,17 @@
   },
   "homepage": "https://github.com/MasonGeloso/tradier#readme",
   "dependencies": {
-    "@types/jest": "^27.5.1",
     "axios": "^0.27.2",
     "env-cmd": "^10.1.0",
-    "jest": "^28.1.0",
     "onchange": "^7.1.0",
     "qs": "^6.11.2",
-    "request": "^2.88.2",
-    "ts-jest": "^28.0.2",
-    "typescript": "^4.6.4"
+    "request": "^2.88.2"
   },
   "devDependencies": {
-    "@types/node": "^17.0.35"
+    "@types/node": "^17.0.35",
+    "jest": "^28.1.0",
+    "ts-jest": "^28.0.2",
+    "@types/jest": "^27.5.1",
+    "typescript": "^4.6.4"
   }
 }
